Add functional gui elements to select color.
Added a black pen button, an eraser pen button (which selects white), and a
rainbow button. All of these set the value of colorChoice.
Whenever the colour change function is called (on any mouseover a grid element)
the value of colorChoice is checked through an "if" statement.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <div class ="contentBox" id="leftControls">
             <p id="gridSizeLabel">16 x 16</p>
             <input type="range" min="1" max="100" value="16" id="gridSize"><br>
-            <button type="button" id="redrawGrid">New Grid</button>
+            <button type="button" id="redrawGrid">New Grid</button><br>
+            <button type="button" class="colorButton" id="blackPen">Black Pen</button><br>
+            <button type="button" class="colorButton" id="rainbowPen">Rainbow Pen</button><br>
+            <button type="button" class="colorButton" id="eraserPen">Eraser</button><br>
         </div>
         <div class ="contentBox" id="gridContainer"></div>
         <div class ="contentBox" id="rightControls"></div>
