Add custom color selection ability.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <button type="button" class="colorButton" id="blackPen">Black Pen</button><br>
             <button type="button" class="colorButton" id="rainbowPen">Rainbow Pen</button><br>
             <button type="button" class="colorButton" id="eraserPen">Eraser</button><br>
+            <input type="color" value="#000000" id="colorPicker"><br>
         </div>
         <div class ="contentBox" id="gridContainer"></div>
         <div class ="contentBox" id="rightControls"></div>
