--- a/index.html
+++ b/index.html
@@ -8,21 +8,32 @@
     <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
-    <div class ="contentBox" id="header">Etch-A-Sketch</div>
+    <div class ="contentBox" id="leftBox">
+        <div class ="contentBox controlBox" id="leftControls">
+            <div id="sizingElements">
+                <p id="gridSizeLabel">16 x 16</p>
+                <input type="range" min="1" max="100" value="16" id="gridSize">
+                <a class="fauxButton" id="redrawGrid">New Grid</a>
+            </div>
+            <a class="colorButton fauxButton" id="blackPen">Black Pen</a>
+            <a class="colorButton fauxButton" id="rainbowPen">Rainbow Pen</a>
+            <a class="colorButton fauxButton" id="eraserPen">Eraser</a>
+                <label type="label" for="colorPicker" id="pickerLabel">Custom Color</label>
+                <input type="color" value="#FF0000" id="colorPicker">
+            <a class="fauxButton" id="toggleGrid">Toggle Lines</a> 
+        </div>           
+    </div>  
     <div class ="contentBox" id="mainContent">
-        <div class ="contentBox" id="leftControls">
-            <p id="gridSizeLabel">16 x 16</p>
-            <input type="range" min="1" max="100" value="16" id="gridSize"><br>
-            <button type="button" id="redrawGrid">New Grid</button><br>
-            <button type="button" class="colorButton" id="blackPen">Black Pen</button><br>
-            <button type="button" class="colorButton" id="rainbowPen">Rainbow Pen</button><br>
-            <button type="button" class="colorButton" id="eraserPen">Eraser</button><br>
-            <input type="color" value="#000000" id="colorPicker"><br>
-        </div>
-        <div class ="contentBox" id="gridContainer"></div>
-        <div class ="contentBox" id="rightControls"></div>
+        <div class ="contentBox" id="header">Etch-A-Sketch</div>        
+        <div class ="contentBox gridActive" id="gridContainer"></div> 
+        <div class ="contentBox" id="footer">        
+            Copyright ©
+            <script>
+              document.write(new Date().getFullYear())
+            </script>
+            KHetherington89</div>
     </div>
-    <div class ="contentBox" id="footer">Page by K.Hetherington 2023</div>
+    <div class ="contentBox" id="rightBox"></div>   
     <script src="etch-a-sketch.js"></script>
 </body>
 </html>
