--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <input type="range" min="1" max="100" value="16" id="gridSize">
                 <a class="fauxButton" id="redrawGrid">New Grid</a>
             </div>
-            <a class="colorButton fauxButton" id="blackPen">Black Pen</a>
+            <a class="colorButton cbActive fauxButton" id="blackPen">Black Pen</a>
             <a class="colorButton fauxButton" id="rainbowPen">Rainbow Pen</a>
             <a class="colorButton fauxButton" id="eraserPen">Eraser</a>
-                <label type="label" for="colorPicker" id="pickerLabel">Custom Color</label>
-                <input type="color" value="#FF0000" id="colorPicker">
+            <label type="label" for="colorPicker" class="colorButton" id="pickerLabel">Custom Color</label>
+            <input type="color" value="#FF0000" id="colorPicker">
             <a class="fauxButton" id="toggleGrid">Toggle Lines</a> 
         </div>           
     </div>  
