Re-arrange layout divs to adjust styling.

--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
     <script src="etch-a-sketch.js" defer></script>
 </head>
 <body>
-    <div class="contentBox leftBox" id="leftBox"><!-- 
-        <div class="contentBox controlBox" id="leftControls"> -->
+    <div class="contentBox header" id="header">Etch-A-Sketch</div> 
+    <div class="contentBox mainContent" id="mainContent">
+        <div class="leftBox" id="leftBox">
             <div class="colorElements" id="colorElements">
                 <a class="colorButton cbActive" id="blackPen">Black Pen</a>
                 <a class="colorButton" id="rainbowPen">Rainbow Pen</a>
                 <a class="colorButton" id="eraserPen">Eraser</a>
                 <label type="label" for="colorPicker" class="colorButton" id="pickerLabel">Custom Color</label>
-                <input type="color" value="#FF0000" id="colorPicker">
+                <input type="color" value="#AA0303" id="colorPicker">
                 <div class="colorSwatch" id="colorSwatch"></div>
-            </div>
-        <!-- </div>  -->          
-    </div>  
-    <div class="contentBox midBox" id="midBox">
-        <div class="contentBox header" id="header">Etch-A-Sketch</div>        
-        <div class="contentBox gridContainer gridActive" id="gridContainer"></div> 
-        <div class="contentBox footer" id="footer"></div>
-    </div>
-    <div class="contentBox rightBox" id="rightBox">
-        <div class="sizingElements" id="sizingElements">
-            <p class="gridSizeLabel" id="gridSizeLabel">16 x 16</p>
-            <input type="range" min="1" max="100" value="16" id="gridSize">
-            <a class="fauxButton" id="redrawGrid">New Grid</a>
-            <a class="fauxButton" id="toggleGrid">Toggle Lines</a> 
+            </div>         
+        </div>  
+        <div class="midBox" id="midBox">       
+            <div class="gridContainer gridActive" id="gridContainer"></div>
         </div>
-    </div>   
+        <div class="rightBox" id="rightBox">
+            <div class="sizingElements" id="sizingElements">
+                <p class="gridSizeLabel" id="gridSizeLabel">16 x 16</p>
+                <input type="range" min="1" max="100" value="16" id="gridSize">
+                <a class="fauxButton" id="redrawGrid">New Grid</a>
+                <a class="fauxButton" id="toggleGrid">Toggle Lines</a> 
+            </div>
+        </div> 
+    </div>
+    <div class="contentBox footer" id="footer"></div>  
     
 </body>
 </html>
